--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
 
 body {
   background: #acfac8;
-  max-width: 500px;
-  margin: 30px auto;
+  margin: 0;
   font-size: 20px;
+  height: 100;
+  width: 100;
+  overflow: hidden;
 }
 
 input, select, button {
@@ -52,7 +54,9 @@ h2 {
   background-color: #0e4274;
   color: white;
   padding: 20px;
-  border-radius: 10px;
+  height: 100;
+  box-sizing: border-box;
+  overflow-y: auto;
 }
 
 #app-screen h2 {
@@ -149,15 +153,12 @@ h2 {
   position: fixed;
   z-index: 1000;
   left: 0; top: 0;
-  width: 100%; height: 100%;
+  width: 100vw; height: 100vh;
   background-color: rgba(0,0,0,0.4);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .modal-content {
   background-color: #fff;
